--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -224,7 +224,7 @@ Default Btn Style
 .default-btn.active {
   margin-left: 20px;
   color: #232350;
-  background-color: transparent;
+  background-color: transparent !important;
   border: 1px solid #070f4d;
   overflow: hidden;
 }
@@ -1964,7 +1964,7 @@ Testimonial Area
 }
 
 .testimonial-item {
-  max-width: 670px;
+  max-width: 700px;
   margin-top: 150px;
   margin-left: auto;
   margin-right: auto;
@@ -2621,11 +2621,11 @@ Client Area
   background-color: #4356d6 !important;
 }
 
-.client-area .client-slider .center .client-item {
+.client-area .client-slider .client-item {
   background-color: #4356d6;
 }
 
-.client-area .client-slider .center .client-item::before {
+.client-area .client-slider  .client-item::before {
   content: '';
   position: absolute;
   background-image: url(../img/testimonial/shape-bg.png);
@@ -2639,7 +2639,7 @@ Client Area
   width: 100%;
 }
 
-.client-area .client-slider .center .client-item h3, .client-area .client-slider .center .client-item p {
+.client-area .client-slider  .client-item h3, .client-area .client-slider  .client-item p {
   color: #fff;
 }
 
